--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3031,10 +3031,10 @@ button:disabled,
 			} */
 
 #header .inner {
-	-moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
-	-webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
-	-ms-transition: -ms-transform 1.5s ease, opacity 2s ease;
-	transition: transform 1.5s ease, opacity 2s ease;
+	-moz-transition: -moz-transform 1.25s ease, opacity 1.5s ease;
+	-webkit-transition: -webkit-transform 1.25s ease, opacity 1.5s ease;
+	-ms-transition: -ms-transform 1.25s ease, opacity 1.5s ease;
+	transition: transform 1.25s ease, opacity 1.5s ease;
 	-moz-transition-delay: 0.25s;
 	-webkit-transition-delay: 0.25s;
 	-ms-transition-delay: 0.25s;
@@ -3049,14 +3049,14 @@ button:disabled,
 }
 
 #header .inner .actions {
-	-moz-transition: -moz-transform 1.25s ease;
-	-webkit-transition: -webkit-transform 1.25s ease;
-	-ms-transition: -ms-transform 1.25s ease;
-	transition: transform 1.25s ease;
-	-moz-transition-delay: 1s;
-	-webkit-transition-delay: 1s;
-	-ms-transition-delay: 1s;
-	transition-delay: 1s;
+	-moz-transition: -moz-transform 1s ease;
+	-webkit-transition: -webkit-transform 1s ease;
+	-ms-transition: -ms-transform 1s ease;
+	transition: transform 1s ease;
+	-moz-transition-delay: .75s;
+	-webkit-transition-delay: .75s;
+	-ms-transition-delay: .75s;
+	transition-delay: .75s;
 	-moz-transform: translateY(0);
 	-webkit-transform: translateY(0);
 	-ms-transform: translateY(0);
@@ -3065,10 +3065,10 @@ button:disabled,
 }
 
 #header:after {
-	-moz-transition: opacity 1s ease;
-	-webkit-transition: opacity 1s ease;
-	-ms-transition: opacity 1s ease;
-	transition: opacity 1s ease;
+	-moz-transition: opacity .75s ease;
+	-webkit-transition: opacity .75s ease;
+	-ms-transition: opacity .75s ease;
+	transition: opacity .75s ease;
 	background-image: linear-gradient(45deg, #4fa49a, #4361c2);
 	content: '';
 	height: 100%;
